# tickerscope

./: .gitignore  AGENTS.md  DATA_AUDIT.md  MISSING_QUERIES.md  Makefile  README.md  properdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: error-handling.md  getting-started.md  index.md  serialization.md  stock-data.md  watchlists-and-screens.md
scripts/: gen_ref_pages.py
src/tickerscope/: AGENTS.md  __init__.py  _auth.py  _cache.py  _client.py  _dates.py  _exceptions.py  _models.py  _parsing.py  _queries.py  _serialization.py
tests/: AGENTS.md  conftest.py  test_async_client.py  test_async_factory.py  test_auth.py  test_base_client.py  test_caching.py  test_capabilities.py  test_catalog.py  test_chart_weekly.py  test_client.py  test_coach_screen.py  test_coach_tree.py  test_convenience.py  test_date_properties.py  test_exceptions.py  test_flagged_symbols.py  test_http_errors.py  test_jwt_auth.py  test_lookback.py  test_models.py  test_nav_tree.py  test_omit_none_spike.py  test_pagination.py  test_pagination_filtering.py  test_panels.py  test_parsing.py  test_public_api.py  test_rs_rating_history.py  test_screen_result.py  test_screens.py  test_serializable_base.py  test_serialization.py  test_server_time.py  test_smoke.py  test_stock_analysis.py  test_str_methods.py  test_structured_errors.py  test_token_detection.py  test_token_expiry.py  (+2 more)
tests/fixtures/: active_alerts_response.json  adhoc_screen_response.json  chart_data_response.json  chart_markups_response.json  coach_tree_response.json  flagged_symbols_response.json  (+13 more)
(+21 files in other folders)
