[project]
name = "tickerscope"
version = "0.1.1"
description = "Unofficial Python client for the MarketSurge stock research API"
readme = "README.md"
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "mashumaro>=3.20",
    "rookiepy>=0.5.6",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "radon>=6.0.1",
    "ruff>=0.15.7",
    "ty>=0.0.24",
    "vulture>=2.15",
]
